[gd_scene load_steps=92 format=2]

[ext_resource path="res://SpriteSheets/Player/Fullmain.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Dash.tscn" type="PackedScene" id=3]
[ext_resource path="res://Effects/DashEffect/3.png" type="Texture" id=4]
[ext_resource path="res://Effects/DashEffect/4.png" type="Texture" id=5]
[ext_resource path="res://Effects/DashEffect/1.png" type="Texture" id=6]
[ext_resource path="res://Effects/DashEffect/2.png" type="Texture" id=7]
[ext_resource path="res://Effects/DashEffect/32.png" type="Texture" id=8]
[ext_resource path="res://Effects/DashEffect/33.png" type="Texture" id=9]
[ext_resource path="res://Effects/DashEffect/29.png" type="Texture" id=10]
[ext_resource path="res://Effects/DashEffect/30.png" type="Texture" id=11]
[ext_resource path="res://Effects/DashEffect/27.png" type="Texture" id=12]
[ext_resource path="res://Effects/DashEffect/31.png" type="Texture" id=13]
[ext_resource path="res://Effects/DashEffect/34.png" type="Texture" id=14]
[ext_resource path="res://Effects/DashEffect/28.png" type="Texture" id=15]
[ext_resource path="res://Effects/DashEffect/10.png" type="Texture" id=16]
[ext_resource path="res://Effects/DashEffect/26.png" type="Texture" id=17]
[ext_resource path="res://Effects/DashEffect/20.png" type="Texture" id=18]
[ext_resource path="res://Effects/DashEffect/21.png" type="Texture" id=19]
[ext_resource path="res://Effects/DashEffect/19.png" type="Texture" id=20]
[ext_resource path="res://Effects/DashEffect/25.png" type="Texture" id=21]
[ext_resource path="res://Effects/DashEffect/13.png" type="Texture" id=22]
[ext_resource path="res://Effects/DashEffect/18.png" type="Texture" id=23]
[ext_resource path="res://Effects/DashEffect/12.png" type="Texture" id=24]
[ext_resource path="res://Effects/DashEffect/22.png" type="Texture" id=25]
[ext_resource path="res://Effects/DashEffect/11.png" type="Texture" id=26]
[ext_resource path="res://Effects/DashEffect/15.png" type="Texture" id=27]
[ext_resource path="res://Effects/DashEffect/16.png" type="Texture" id=28]
[ext_resource path="res://Effects/DashEffect/17.png" type="Texture" id=29]
[ext_resource path="res://Effects/DashEffect/14.png" type="Texture" id=30]
[ext_resource path="res://Effects/DashEffect/23.png" type="Texture" id=31]
[ext_resource path="res://Effects/DashEffect/24.png" type="Texture" id=32]
[ext_resource path="res://Effects/DashEffect/60.png" type="Texture" id=33]
[ext_resource path="res://Effects/DashEffect/45.png" type="Texture" id=34]
[ext_resource path="res://Effects/DashEffect/46.png" type="Texture" id=35]
[ext_resource path="res://Effects/DashEffect/49.png" type="Texture" id=36]
[ext_resource path="res://Effects/DashEffect/43.png" type="Texture" id=37]
[ext_resource path="res://Effects/DashEffect/51.png" type="Texture" id=38]
[ext_resource path="res://Effects/DashEffect/55.png" type="Texture" id=39]
[ext_resource path="res://Effects/DashEffect/56.png" type="Texture" id=40]
[ext_resource path="res://Effects/DashEffect/57.png" type="Texture" id=41]
[ext_resource path="res://Effects/DashEffect/58.png" type="Texture" id=42]
[ext_resource path="res://Effects/DashEffect/59.png" type="Texture" id=43]
[ext_resource path="res://Effects/DashEffect/53.png" type="Texture" id=44]
[ext_resource path="res://Effects/DashEffect/52.png" type="Texture" id=45]
[ext_resource path="res://Effects/DashEffect/44.png" type="Texture" id=46]
[ext_resource path="res://Effects/DashEffect/48.png" type="Texture" id=47]
[ext_resource path="res://Effects/DashEffect/47.png" type="Texture" id=48]
[ext_resource path="res://Effects/DashEffect/50.png" type="Texture" id=49]
[ext_resource path="res://Effects/DashEffect/54.png" type="Texture" id=50]
[ext_resource path="res://Effects/DashEffect/5.png" type="Texture" id=51]
[ext_resource path="res://Effects/DashEffect/6.png" type="Texture" id=52]
[ext_resource path="res://Effects/DashEffect/7.png" type="Texture" id=53]
[ext_resource path="res://Effects/DashEffect/8.png" type="Texture" id=54]
[ext_resource path="res://Effects/DashEffect/9.png" type="Texture" id=55]
[ext_resource path="res://Effects/DashEffect/40.png" type="Texture" id=56]
[ext_resource path="res://Effects/DashEffect/42.png" type="Texture" id=57]
[ext_resource path="res://Effects/DashEffect/37.png" type="Texture" id=58]
[ext_resource path="res://Effects/DashEffect/35.png" type="Texture" id=59]
[ext_resource path="res://Effects/DashEffect/36.png" type="Texture" id=60]
[ext_resource path="res://Effects/DashEffect/38.png" type="Texture" id=61]
[ext_resource path="res://Effects/DashEffect/39.png" type="Texture" id=62]
[ext_resource path="res://Effects/DashEffect/41.png" type="Texture" id=63]
[ext_resource path="res://Effects/GlideEffect/1_12.png" type="Texture" id=64]
[ext_resource path="res://Effects/GlideEffect/1_4.png" type="Texture" id=65]
[ext_resource path="res://Effects/GlideEffect/1_0.png" type="Texture" id=66]
[ext_resource path="res://Effects/GlideEffect/1_14.png" type="Texture" id=67]
[ext_resource path="res://Effects/GlideEffect/1_13.png" type="Texture" id=68]
[ext_resource path="res://Effects/GlideEffect/1_1.png" type="Texture" id=69]
[ext_resource path="res://Effects/GlideEffect/1_5.png" type="Texture" id=70]
[ext_resource path="res://Effects/GlideEffect/1_6.png" type="Texture" id=71]
[ext_resource path="res://Effects/GlideEffect/1_8.png" type="Texture" id=72]
[ext_resource path="res://Effects/GlideEffect/1_3.png" type="Texture" id=73]
[ext_resource path="res://Effects/GlideEffect/1_9.png" type="Texture" id=74]
[ext_resource path="res://Effects/GlideEffect/1_10.png" type="Texture" id=75]
[ext_resource path="res://Effects/GlideEffect/1_7.png" type="Texture" id=76]
[ext_resource path="res://Effects/GlideEffect/1_2.png" type="Texture" id=77]
[ext_resource path="res://Effects/GlideEffect/1_11.png" type="Texture" id=78]

[sub_resource type="Animation" id=2]
resource_name = "Fall"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "HeavyAttack"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 1.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sword/HeavyAttack:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sword/HeavyAttack2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "LightAttack"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.5, 2.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sword/LightAttack:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sword/LightAttack:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sword/HeavyAttack:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sword/HeavyAttack:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4.5, 12.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sword/HeavyAttack2:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 16 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 25 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 58 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 56 ), ExtResource( 63 ), ExtResource( 57 ), ExtResource( 37 ), ExtResource( 46 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 48 ), ExtResource( 47 ), ExtResource( 36 ), ExtResource( 49 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 50 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 66 ), ExtResource( 69 ), ExtResource( 77 ), ExtResource( 73 ), ExtResource( 65 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 76 ), ExtResource( 72 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 78 ), ExtResource( 64 ), ExtResource( 68 ), ExtResource( 67 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5, 29 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 20.5, 30 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 47.25, 20.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 20, 33.5 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 499, 281 )
script = ExtResource( 2 )
jump_speed = 250

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Fall = SubResource( 2 )
anims/HeavyAttack = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/LightAttack = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="DashSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.0281982, 0.286363, 0.328125, 1 )
position = Vector2( -221, 8 )
rotation = -1.5708
scale = Vector2( 6, 14 )
frames = SubResource( 9 )
frame = 12
playing = true

[node name="GlideSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, -26 )
rotation = 1.5708
scale = Vector2( 4, 9 )
frames = SubResource( 13 )
frame = 6
playing = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 10
vframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.5, 4 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Dash" parent="." instance=ExtResource( 3 )]

[node name="Sword" type="Area2D" parent="." groups=["Sword"]]
visible = false
collision_layer = 4
collision_mask = 8

[node name="LightAttack" type="CollisionShape2D" parent="Sword"]
modulate = Color( 0.0313726, 1, 0, 1 )
position = Vector2( -30, 1 )
shape = SubResource( 10 )
disabled = true

[node name="HeavyAttack" type="CollisionShape2D" parent="Sword"]
modulate = Color( 0.87451, 0, 1, 1 )
position = Vector2( 3.25, 11.5 )
shape = SubResource( 11 )
disabled = true

[node name="HeavyAttack2" type="CollisionShape2D" parent="Sword"]
modulate = Color( 0.501961, 0, 0, 1 )
position = Vector2( 30, -0.5 )
shape = SubResource( 12 )
disabled = true
